Cleared some junc, added more info in notebook

--- a/notebooks/rule_based_agent_ru.ipynb
+++ b/notebooks/rule_based_agent_ru.ipynb
@@ -65,6 +65,8 @@
     "\n",
     "Сам алгоритм построения для шагающего агента очень прост. Построение ведется по столбцам сетки в зоне построения. Если в целевой сетке, на определенном столбце существует элемент на некоторой высоте, то агент строит \"башню\" с данной высотой в соответствующих координатах. Когда башня достроена, агент спрыгивает с башни, удаляя ненужные блоки. И так для каждого столбца - с лева на право, с севера на юг.\n",
     "\n",
+    "Исходный код агента можно посмотреть [здесь](https://github.com/v3code/IGLU-simple-agent/blob/master/core/builder_walking.py)\n",
+    "\n",
     "# Проблемы с летающим агентом\n",
     "- Непрерывным является только движение камерой, движение агента идет с одинаковой скоростью при любом значении в управляющем векторе от -1 до 1 (кроме соответственно 0).\n",
     "- Движение по вертикали вверх и вниз не проходит сквозь блоки\n",
