Updated some info

--- a/notebooks/rule_based_agent_ru.ipynb
+++ b/notebooks/rule_based_agent_ru.ipynb
@@ -61,6 +61,12 @@
     "\n",
     "Расчет всех необходимых действий производится при инициализации агента. Разделение на очередь действий и постройки нужно для оптимизации оперативной памяти.\n",
     "\n",
+    "Для корректной работы необходимо передать в конструктор агента карту, которую необходимо получить (target_grid) и начальное положение агента.\n",
+    "\n",
+    "## Ограничения агентов\n",
+    "- Агенты пока могу работать только из известной начальной позиции.\n",
+    "- Агенты будут корректно строить только при пустом начальном состоянии карты среды.\n",
+    "\n",
     "## Описание алгоритма шагающего агента\n",
     "\n",
     "Сам алгоритм построения для шагающего агента очень прост. Построение ведется по столбцам сетки в зоне построения. Если в целевой сетке, на определенном столбце существует элемент на некоторой высоте, то агент строит \"башню\" с данной высотой в соответствующих координатах. Когда башня достроена, агент спрыгивает с башни, удаляя ненужные блоки. И так для каждого столбца - с лева на право, с севера на юг.\n",
@@ -153,7 +159,7 @@
     "        predicted_grid = grid_predictor.predict_grid(dialog)\n",
     "\n",
     "        obs = env.reset()\n",
-    "        agent = BuilderWalking(predicted_grid, current_position=obs['agentPos'][:3])\n",
+    "        agent = BuilderWalking(predicted_grid, obs['agentPos'][:3])\n",
     "        done = False\n",
     "\n",
     "        while not agent.is_done:\n",
