--- a/notebooks/rule_based_agent_ru.ipynb
+++ b/notebooks/rule_based_agent_ru.ipynb
@@ -31,6 +31,21 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0,'/content/IGLU-simple-agent')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Описание агентов\n",
@@ -187,18 +202,6 @@
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   }
