--- a/notebooks/rule_based_agent_ru.ipynb
+++ b/notebooks/rule_based_agent_ru.ipynb
@@ -105,7 +105,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Оценка агента с использованием NLP моделью"
+    "# Оценка агента с использованием NLP модели"
    ],
    "metadata": {
     "collapsed": false,
