Fixed some dependencies

--- a/notebooks/rule_based_agent_ru.ipynb
+++ b/notebooks/rule_based_agent_ru.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "!git clone https://github.com/v3code/IGLU-simple-agent.git\n",
     "%cd ./IGLU-simple-agent\n",
-    "!./initialize.sh --colab"
+    "!./initialize.sh"
    ],
    "metadata": {
     "collapsed": false,
