Deleted unused code

--- a/notebooks/rule_based_agent_ru.ipynb
+++ b/notebooks/rule_based_agent_ru.ipynb
@@ -152,7 +152,7 @@
     "from gridworld.data import IGLUDataset\n",
     "\n",
     "from nlp_model.agent import GridPredictor, get_dialog\n",
-    "from nlp_model.utils import plot_voxel, compute_metric\n",
+    "from nlp_model.utils import compute_metric\n",
     "\n",
     "dataset = IGLUDataset(dataset_version='v0.1.0-rc1', )\n",
     "\n",
@@ -160,7 +160,6 @@
     "def eval_agent():\n",
     "    grid_predictor = GridPredictor()\n",
     "    env = gym.make('IGLUGridworld-v0', vector_state=True, render_size=(800, 600))\n",
-    "    # print(np.array(task.starting_grid).nonzero())\n",
     "    env.set_task(DUMMY_TASK)\n",
     "    total_score = []\n",
     "\n",
@@ -173,7 +172,6 @@
     "\n",
     "        obs = env.reset()\n",
     "        agent = BuilderWalking(predicted_grid, obs['agentPos'][:3])\n",
-    "        done = False\n",
     "\n",
     "        while not agent.is_done:\n",
     "            action = agent.get_action()\n",
@@ -184,13 +182,7 @@
     "            os.makedirs('plots')\n",
     "\n",
     "        f1_score = round(compute_metric(obs['grid'], subtask.target_grid)['completion_rate_f1'], 3)\n",
-    "        results = {'F1': f1_score}\n",
     "        total_score.append(f1_score)\n",
-    "        results_str = \" \".join([f\"{metric}: {value}\" for metric, value in results.items()])\n",
-    "        plot_voxel(predicted_grid, text=str_id + ' ' + f'({results_str})' + \"\\n\" + dialog).savefig(\n",
-    "            f'./plots/{str_id}-predicted.png')\n",
-    "        plot_voxel(subtask.target_grid, text=str_id + \" (Ground truth)\\n\" + dialog).savefig(\n",
-    "            f'./plots/{str_id}-gt.png')\n",
     "\n",
     "    print('Total F1 score:', np.mean(total_score))\n",
     "eval_agent()"
